# rtxngin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
source/: camera.hpp  color.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  rtweekend.hpp  sphere.hpp  vector3.hpp
